# hik-voxel

./: .gitignore  CMakeLists.txt  README.md  vcpkg.json
Captures/Pieta512/: hik_voxel-pieta512-svo-00.rdc  hik_voxel-pieta512-svo-01.rdc  hik_voxel-pieta512-svo-02.rdc
Captures/Teapot256/: hik_voxel-teapot256-naive-00.rdc  hik_voxel-teapot256-naive-01.rdc  hik_voxel-teapot256-naive-02.rdc  hik_voxel-teapot256-svo-00.rdc  hik_voxel-teapot256-svo-01.rdc  hik_voxel-teapot256-svo-02.rdc
Captures/Torus64/: hik_voxel-torus64-naive-00.rdc  hik_voxel-torus64-naive-01.rdc  hik_voxel-torus64-naive-02.rdc  hik_voxel-torus64-svo-00.rdc  hik_voxel-torus64-svo-01.rdc  hik_voxel-torus64-svo-02.rdc
models/: teapot256.vox  teapot_simple.vox  torus16.vox  torus64.vox  torus_simple.vox
shaders/: gradient.comp.spv  naiveRayMarcher.comp  naiveRayMarcher.comp.spv  sphere.comp  sphere.comp.spv  svoRayMarcher.comp  svoRayMarcher.comp.spv
src/: Camera.cpp  Camera.h  Descriptor.cpp  Descriptor.h  Pipeline.cpp  Pipeline.h  ProceduralLoader.cpp  ProceduralLoader.h  Renderer.cpp  Renderer.h  SvoWorld.cpp  SvoWorld.h  UncompressedGridWorld.cpp  UncompressedGridWorld.h  VoxLoader.cpp  VoxLoader.h  VulkanHelper.cpp  VulkanHelper.h  Window.cpp  Window.h  World.h  main.cpp
